# pangesim

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  __init__.py~  config.py  config.py~  fixtures.py  fixtures.py~  run_error.py  run_harry_plotter.py  run_refinement_visualization.py  run_refinement_visualization.py~  run_scalability.py  run_single_scenario.py  run_single_scenario.py~  run_single_scenario_core_vs_nocore.py  run_single_scenario_core_vs_nocore.py~  runners.py  runners.py~  tracking.py  tracking.py~
docs/: CHANGELOG.md  contributing.md
results/run_20260630/: master_evaluation_metrics.csv
results/run_20260702/: scalability_metrics.csv
results/run_20260706/: scalability_metrics.csv
results/run_20260707/: error_metrics.csv
results/run_20260707/single_scenario_dummy/: master_evaluation_metrics.csv
results/run_20260709/: error_metrics_ISMB_bounds.csv  error_metrics_dummy_bounds.csv
results/run_20260712/: error_metrics_ISMB_bounds.csv
results/run_20260713/: error_metrics_ISMB_bounds.csv
results/run_20260714/: error_metrics_ISMB_bounds.csv
scripts/: run_example.py  run_missing_genes.py  run_peeling.py  run_scalability_test.py  run_strategy_comparison.py
src/pangesim/: __init__.py  __init__.py~
src/pangesim/datastructures/: __init__.py~  pangenome.py
tests/: test_datastructures.py  test_datastructures.py~  test_evolution.py  test_evolution.py~  test_operators.py  test_reconstruction.py  test_visualizations.py
tests/metrics/: test_classification.py  test_classification.py~  test_summary.py  test_summary.py~
(+42 files in other folders)
